Feat:Gemini로 음식 사진 전달시 음식 이름, 영양 정보, 설명 반환 API

--- a/learning/src/main/resources/application.properties
+++ b/learning/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.ai.google.api-key=${GEMINI_API}
 spring.ai.google.chat.options.model=gemini-2.0-flash-exp-image-generation
 spring.ai.google.chat.options.temperature=1
 spring.ai.google.chat.options.max-tokens=8192
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
